--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,13 @@
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -ms-overflow-style: none;
 }
 
 h1 {
     font-weight: normal;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
