--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -23,6 +23,7 @@ video, .banner-container > img {
     margin-top: -100px;
     margin-bottom: 15px;
     font-weight: normal;
+    text-shadow: 2px 2px black;
 }
 
 .banner-container > h2 {
@@ -30,6 +31,7 @@ video, .banner-container > img {
     font-size: 60px;
     margin-top: -100px;
     font-weight: normal;
+    text-shadow: 2px 2px black;
 }
 
 .banner-container > p {
@@ -37,6 +39,7 @@ video, .banner-container > img {
     color: white;
     font-size: 22px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-shadow: 2px 2px black;
 }
 
 .banner-btns {
