--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,10 @@ h1 {
     font-weight: normal;
 }
 
-html {
-    overscroll-behavior: none;
-}
-
 ::-webkit-scrollbar {
     display: none;
+}
+
+html, body {
+    height: 100%;
 }
