--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -8,6 +8,7 @@ video, .banner-container > img {
 
 .banner-container {
     height: 100vh;
+    margin-top: -4%; /* Fixes 100vh mobile issue */
     width: 100%;
     display: flex;
     flex-direction: column;
