--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ h1 {
     display: none;
 }
 
-html, body {
-    height: 100%;
+body {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
 }
