Added fade banner screen, project entry content delegation, title screen for mind over matter

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,9 +1,13 @@
-video, .banner-container > img {
+video, .banner-container > img, .fadeScreen {
     object-fit: cover;
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: -1;
+}
+
+.fadeScreen {
+    background-color: rgba(0,0,0,0.5);
 }
 
 .banner-container {
