--- a/src/components/pages/ProjectEntry.css
+++ b/src/components/pages/ProjectEntry.css
@@ -8,12 +8,13 @@
 }
 
 .projectEntryContainer {
-    /* background: crimson; */
+    background: aqua;
     width: 90%;
-    max-width: 900px;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
 }
 
 .projectEntryContainer > h1 {
@@ -34,7 +35,6 @@
     margin-bottom: 20px;
     font-size: 22px;
     text-align: center;
-    /* text-align: left; */
     color: rgb(160, 160, 160);
     font-weight: normal;
 }
