--- a/src/components/pages/ProjectEntry.css
+++ b/src/components/pages/ProjectEntry.css
@@ -8,29 +8,60 @@
 }
 
 .projectEntryContainer {
-    background: aqua;
+    /* background: aqua; */
     width: 90%;
     max-width: 800px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding-top: 60px;
+    align-items: center;
 }
 
-.projectEntryContainer > h1 {
+.projectEntryContainer > img {
+    margin: 10px 0px 20px;
+    text-align: center;
+    width: 90%;
+}
+
+.projectEntryContainer h1 {
     margin-top: 30px;
     font-size: 30px;
+}
+
+.projectEntryContainer h3 {
+    font-size: 18px;
+    color:rgb(71, 71, 71);
 }
 
 .projectEntryContainer > p {
     font-size: 18px;
     width: 90%;
     margin-bottom: 40px;
-    text-align: center;
-    /* text-align: justify; */
+    text-align: justify;
 }
 
-.projectEntryContainer > h2 {
+.projectEntryContainer > p.placeholderText {
+    text-align: center;
+}
+
+.projectEntryContainer span {
+    color:rgb(50, 100, 100);
+    /* background-color: seagreen; */
+    text-decoration: bold;
+    display: inline-block;
+    width: 120px;
+}
+
+.projectInfo span.endLine {
+    margin-bottom: 30px;
+    width: 0px;
+}
+
+.projectEntryContainer .projectInfo {
+    font-size: 16px;
+}
+
+.projectEntryContainer h2 {
     width: 90%;
     margin-bottom: 20px;
     font-size: 22px;
@@ -46,14 +77,22 @@
 @media screen and (max-width: 768px)
 {
     .projectEntryContainer > p {
-        font-size: 15px;
+        font-size: 14px;
     }
 
-    .projectEntryContainer > h1 {
-        font-size: 26px;
+    .projectEntryContainer h1 {
+        font-size: 25px;
     }
 
-    .projectEntryContainer > h2 {
-        font-size: 18px;
+    .projectEntryContainer h2 {
+        font-size: 17px;
+    }
+
+    .projectEntryContainer h3 {
+        font-size: 16px;
+    }
+
+    .projectEntryContainer .projectInfo {
+        font-size: 14px;
     }
 }
