--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -1,5 +1,5 @@
 .loadingContainer {
-    background-color: #242424;
+    background-color: #1b1b1b;
     height: 100vh;
 }
 
@@ -13,6 +13,18 @@
 
 .loadingCentered > h1 {
     text-align: left;
-    padding-left: 16px;
+    padding-left: 20px;
     color: rgb(177, 177, 177);
+    font-size: 30px;
+}
+
+@media screen and (max-width: 768px)
+{
+    .loadingCentered > h1 {
+        font-size: 25px;
+    }
+
+    .loadingCentered {
+        top: 32%;
+    }
 }
