--- a/src/components/pages/ProjectEntry.css
+++ b/src/components/pages/ProjectEntry.css
@@ -101,6 +101,20 @@
     width: 90%;
 }
 
+.projectEntryContainer a {
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.projectEntryContainer a:visited {
+    color:black;
+}
+
+.projectEntryContainer a:hover {
+    color:rgb(71, 71, 71);
+    transition: 0.2s ease-in;
+}
+
 .player-wrapper {
     position: relative;
     padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
