--- a/src/components/pages/ProjectEntry.css
+++ b/src/components/pages/ProjectEntry.css
@@ -104,6 +104,7 @@
 .projectEntryContainer a {
     text-decoration: none;
     font-weight: 500;
+    color:black;
 }
 
 .projectEntryContainer a:visited {
