--- a/src/components/pages/ProjectEntry.css
+++ b/src/components/pages/ProjectEntry.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     padding-top: 60px;
     align-items: center;
+    z-index: 0;
 }
 
 .projectEntryContainer > img {
